footer font-size changed. floating fix removed on smaller device width(s).

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -59,16 +59,17 @@
 
 /* for DEVICE width less than 800px only. */
 @media screen and (max-device-width:800px) {
+    /* solving floating footer */
+  /*  not needed on phones?
   .footer {
     display: block;
     position: static;
-    /* solving floating footer */
     padding: 20px 0;
-  }
+  } */
   .footer p {
-    margin: 0;
-    padding: 0;
-    font-size: 1.5rem;
+    /* margin: 0;
+    padding: 0; */
+    font-size: 1.85rem;
   }
 
   .navbar {
